[package]
name = "nesemulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
getopts = "0.2.21"
lazy_static = "1.4.0"
rand = "0.8.5"
sdl2 = "0.35.2"

[[bin]]
name = "nesemulator"
path = "src/main.rs"

[[bin]]
name = "tile_viewer"
path = "src/tile_viewer.rs"
